[tool.poetry]
name = "hangman_minigame"
version = "1.0.0"
description = "A hangman minigame made with Python to improve logic."
authors = ["Ralph Santos Souza"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
